src/frameworks/enterprise/main/objects/AsyncWorker__c/AsyncWorker__c.object-meta.xml
<CustomObject>
    <description>Allows the queueing and processing of Asynchronous based transactions. This is a necessary object to keep track of all pending async workers. A record is inserted into this object from the AsyncWorkerEvent__e. This object is used as a holding object which stores details about the worker to be queued for async processing. This is to get around a limitation where Platform Events run as &apos;Automated Process&apos; user. Once a platform event is able to run as a specific user, then this could be decomissioned.</description>
    <label>Async Worker</label>
    <nameField>
        <displayFormat>AW-{00000000}</displayFormat>
        <label>Async Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>