src/frameworks/enterprise/main/objects/AsyncWorker__c/fields/CurrentStackDepth__c.field-meta.xml
<CustomField>
    <fullName>CurrentStackDepth__c</fullName>
    <description>The current stack depth in the async execution cycle</description>
    <label>Current Stack Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>