src/frameworks/enterprise/main/objects/AsyncWorker__c/fields/QueueableJobId__c.field-meta.xml
<CustomField>
    <fullName>QueueableJobId__c</fullName>
    <label>Queueable Job Id (Deprecated)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>