src/frameworks/enterprise/main/objects/AsyncWorker__c/fields/SObjectTypeGroup__c.field-meta.xml
<CustomField>
    <fullName>SObjectTypeGroup__c</fullName>
    <description>Async workers can grouped together to be processed in the same queueable instance. We sequentially move through the enqueued async workers and where this field and the Unit of Work SObject Types field are the same, then we combine those requests into a single queueable. If this combined with the Unit of Work SObject Types Denotes the specific group this worker falls into.</description>
    <label>SObject Type Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>