src/frameworks/enterprise/main/objects/AsyncWorker__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>Source user ID that instigated the transaction. Might be null depending on how this event was published</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>